# tessera

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  guardrails-adr-exempt.txt  justfile.project  pyproject.toml
.devcontainer/: Containerfile.fd5  docker-compose.project.yaml  docker-compose.yml
.githooks/: pre-commit.legacy  pre-push
.github/: dependabot.yml
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  sync-issues.yml
crates/fd5/: Cargo.toml
crates/fd5/src/: attr_ser.rs  builder.rs  edit.rs  error.rs  h5io.rs  hash.rs  lib.rs  naming.rs  product.rs  schema.rs  verify.rs
crates/fd5/tests/: conformance.rs
docs/: COMPATIBILITY.md  rfc-tessera.md
docs/adr/: 0002-concurrency-model.md  0003-schema-identification.md  0020-canonical-encoding-and-identity.md  0022-versioning-and-container.md  0023-array-block-payload.md  0024-table-block-payload.md  0025-ingest-model.md  0026-streaming-table-ingest.md  0027-sub-block-merkle-chunk-index.md  0028-unified-hierarchy.md  0029-data-model-composition.md  0030-spatial-referencing.md  0031-sparse-representation.md  0032-referenced-coordinates-and-quantities.md  0033-collections-and-derivation.md  0034-runtime-parallelism-wasm.md  0035-declarative-ingest-spec.md  0036-versioning-audit-object-store.md  0037-signing-trust-model.md  0038-blob-opaque-preservation.md  0039-compute-node-caching.md  0040-data-protection-and-confidentiality.md  0041-provider-mediated-field-decryption.md  0042-self-contained-tsra-aux-members.md  0043-unified-recursive-hierarchy.md  0044-sparse-data-representation.md  0045-units-and-quantities.md  0046-time-model.md  0047-offline-crypto-shred-deidentification.md  0048-provenance-edge-shape.md  README.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  cli.md  intro.md
docs/spikes/: signing-trust-model.md
docs/tutorials/: custom-schema.md  migration-guide.md
examples/: README.md
examples/c/: CMakeLists.txt  create_fd5.c
examples/python/: create_fd5.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
lib/c/: CMakeLists.txt
lib/c/include/: fd5.h  fd5.hpp
lib/c/src/: fd5_attr.c  fd5_builder.c  fd5_hash.c  fd5_internal.h  fd5_verify.c  sha256.c  sha256.h
lib/c/tests/: test_builder.c
schemas/: _manifest.json  calibration.schema.json  device_data.schema.json  listmode.schema.json  recon.schema.json  roi.schema.json  sim.schema.json  sinogram.schema.json  spectrum.schema.json  transform.schema.json
scripts/: adr-matrix-reminder.sh  check-adr-matrix.sh  extract_schemas.py
src/fd5/: cli.py  create.py  quality.py
src/fd5/export/: __init__.py  csv.py  nifti.py  parquet.py
src/fd5/generic/: __init__.py  ndarray.py  tabular.py  timeseries.py
tessera/: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  perf-budgets.toml  rust-toolchain.toml
tessera/bench/ecosystems/: .gitignore  README.md  common.py  pyproject.toml  run.py
tessera/bench/ecosystems/adapters/: dicom.py  hdf5.py  nexus.py  nifti.py  parquet.py  root.py  tessera.py  zarr_.py
tessera/corpus/: corpus.json
tessera/corpus/files/: blob_opaque.tsra  empty_no_blocks.tsra  listmode_events.tsra  multiblock_study.tsra  recon_float32_mumap.tsra  recon_int16.tsra  spectrum_lifetime.tsra
tessera/corpus/reference_reader/: README.md  reader.py  requirements.txt  run.py
tessera/crates/tessera-cli/: Cargo.toml
tessera/crates/tessera-cli/src/: bench.rs  collection.rs  main.rs  nav.rs  sql.rs  trust.rs  version.rs
tessera/crates/tessera-cli/tests/: blob.rs  cli.rs  cloud.rs  lifecycle.rs  migrate_petct_study.rs  sign.rs
tessera/crates/tessera-cli/tests/cmd/: bench.trycmd  commands.trycmd  help.trycmd  ingest_spec.trycmd  inspect.trycmd  navigating.trycmd  persona_signing.trycmd  sql.trycmd  versioning.trycmd
tessera/crates/tessera-cli/tests/cmd/persona_signing.in/: .gitignore  instrument.key  instrument.key.pub  study.tsra.sig.json
tessera/crates/tessera-cli/tests/cmd/persona_signing.in/.tessera/trust/: instrument-lab.signer
tessera/crates/tessera-cli/tests/cmd/versioning.in/: .gitignore  study.tsra
tessera/crates/tessera-core/: Cargo.toml
tessera/crates/tessera-core/src/: canonical.rs  chunk_index.rs  collection.rs  dtype.rs  error.rs  export.rs  hash.rs  identity.rs  lib.rs  manifest.rs  product.rs  provenance.rs  referencing.rs  schema.rs  signing.rs
tessera/crates/tessera-core/src/block/: array.rs  blob.rs  mod.rs  table.rs
tessera/crates/tessera-core/tests/: integrity.rs
tessera/crates/tessera-ingest/: Cargo.toml
tessera/crates/tessera-ingest/src/: blob.rs  dicom.rs  engine.rs  ge_hdf5.rs  identity.rs  lib.rs  nifti.rs  provenance.rs  raw.rs  spec.rs
tessera/crates/tessera-io/: Cargo.toml
tessera/crates/tessera-io/benches/: codec.rs  throughput.rs
tessera/crates/tessera-io/examples/: bench_compare.rs  gen_corpus.rs  gen_corpus_files.rs  spike_chunk_index.rs  spike_sparse.rs  stream_write.rs
tessera/crates/tessera-io/src/: accumulate.rs  array.rs  blob.rs  chunk_index.rs  cloud.rs  collection.rs  config.rs  conformance.rs  container.rs  lib.rs  multiblock.rs  oci.rs  provenance.rs  range.rs  registry.rs  repo.rs  sign.rs  stream.rs  table.rs  worm.rs  write.rs
tessera/crates/tessera-io/tests/: conformance.rs
tessera/crates/tessera-py/: Cargo.toml  README.md
tessera/crates/tessera-py/python/tessera/: __init__.py
tessera/crates/tessera-py/src/: lib.rs
tessera/crates/tessera-py/tests/: smoke.py
tessera/crates/tessera-wasm/: Cargo.toml
tessera/crates/tessera-wasm/src/: lib.rs
tessera/crates/tessera-wasm/tests/: smoke.cjs
tessera/docs/: AUTONOMOUS-GOAL.md  FEATURE-MATRIX.md  MIGRATION.md  ROADMAP.md  SPEC.md  SPIKE-RESULTS.md  TEST-PLAN.md
tessera/docs/examples/: ingest-ge-listmode.toml  migrate-petct-study.toml
tessera/docs/examples/cache-node/: README.md  flake.nix  zot-config.json
tests/: test_create.py  test_export_csv.py  test_export_nifti.py  test_export_parquet.py  test_ndarray.py  test_preseal_validation.py  test_recon.py  test_tabular.py  test_timeseries.py
(+1 files in other folders)
