[workspace]
resolver = "2"
members = ["crates/tessera-core", "crates/tessera-io", "crates/tessera-cli"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.0.0"
repository = "https://github.com/vig-os/tessera"
authors = ["vig-os"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.2"          # RFC 8785 JSON Canonicalization Scheme — reproducible hashing
blake3 = "1"
thiserror = "2"
time = { version = "0.3", features = ["parsing", "formatting"] }
proptest = "1"
zip = { version = "2", default-features = false }   # STORED zip64 `.tsra` container (no compression deps)
# Array block backend: zarrs (Zarr v3) + pcodec. default-features=false keeps it pure-Rust
# (no C/zstd): we use the in-memory store + the pcodec array→bytes codec only.
zarrs = { version = "0.23", default-features = false, features = ["pcodec"] }
bytes = "1"                                          # zarrs store value type
# Table block backend: Vortex (the settled columnar backend) — deterministic single-file writer +
# reader. vortex-file pulls the default encoding crates (pco/alp/fsst/…); the sub-crates give the
# exact import paths the probe verified. CurrentThreadRuntime drives the async write/read (no tokio).
vortex-file = "0.75"
vortex-array = "0.75"
vortex-btrblocks = "0.75"   # compressor builder — exclude ALP float scheme for cross-env determinism
vortex-buffer = "0.75"
vortex-io = "0.75"
vortex-layout = "0.75"
vortex-session = "0.75"
futures = "0.3"
clap = { version = "4", features = ["derive"] }     # tessera-cli
tessera-core = { path = "crates/tessera-core" }
tessera-io = { path = "crates/tessera-io" }
