[package]
name = "tessera-ingest"
description = "Tessera ingest — vendor decoders (DICOM, …) that normalise at the door into Tessera products"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tessera-core.workspace = true
tessera-io.workspace = true
dicom.workspace = true
# Enables the pure-Rust JPEG Baseline/Lossless adapters in the transfer-syntax registry (feature-unifies
# with `dicom`); used through the `dicom::transfer_syntax` umbrella re-export.
dicom-transfer-syntax-registry.workspace = true
hdf5-metno.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
