[package]
name = "tessera-py"
description = "Python bindings (pyo3, abi3) for the Tessera reader/verifier — import tessera"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
# The Python module is `import tessera`; cargo emits `libtessera.so` (renamed to `tessera.so` on
# install). cdylib = the extension module; no rlib (an extension-module crate can't link `cargo test`).
name = "tessera"
crate-type = ["cdylib"]

[dependencies]
tessera-core.workspace = true
tessera-io.workspace = true
pyo3.workspace = true
serde_json.workspace = true
