[package]
name = "tessera-py"
description = "Python bindings (pyo3, abi3) for the Tessera reader/verifier — import tessera"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
# The compiled extension is `tessera._native`; cargo emits `lib_native.so` (installed as `_native.so`
# inside the `tessera/` package, beside the pure-Python `__init__.py` that adds the numpy/polars/pyarrow
# ergonomic surface). cdylib = the extension module; no rlib (an extension-module crate can't link tests).
name = "_native"
crate-type = ["cdylib"]

[dependencies]
tessera-core.workspace = true
tessera-io.workspace = true
pyo3.workspace = true
serde_json.workspace = true
